fix: Добавил параметр конвертации json в отдельные таблицы

--- a/OneSTools.EventLog.Exporter/appsettings.Development.json
+++ b/OneSTools.EventLog.Exporter/appsettings.Development.json
@@ -17,7 +17,8 @@
     "LoadArchive": false
   },
   "ClickHouse": {
-    "ConnectionString": "Host=192.168.0.93;Port=8123;Database=zup3_united_el;Username=default;password=;"
+    "ConnectionString": "Host=192.168.0.93;Port=8123;Database=zup3_united_el;Username=default;password=;",
+    "ConvertJsonToSeparateTables": false
   },
   "ElasticSearch": {
     "Nodes": [
