--- a/OneSTools.EventLog.Exporter/appsettings.json
+++ b/OneSTools.EventLog.Exporter/appsettings.json
@@ -18,7 +18,8 @@
     "SkipEventsBeforeDate": "2022-04-01T00:00:00"
   },
   "ClickHouse": {
-    "ConnectionString": "Host=CH_HOST_NAME;Port=8123;Database=DATABASE_NAME;Username=USER_NAME;password=PASSWORD;"
+    "ConnectionString": "Host=CH_HOST_NAME;Port=8123;Database=DATABASE_NAME;Username=USER_NAME;password=PASSWORD;",
+    "ConvertJsonToSeparateTables": true
   },
   "ElasticSearch": {
     "Nodes": [
