--- a/OneSTools.EventLog.Exporter.Manager/appsettings.json
+++ b/OneSTools.EventLog.Exporter.Manager/appsettings.json
@@ -9,11 +9,11 @@
   "Manager": {
     "ClstFolders": [
       {
-        "Folder": "\\\\s01\\c$\\Program Files\\1cv8\\srvinfo\\reg_1541",
+        "Folder": "c:\\Program Files\\1cv8\\srvinfo\\reg_1541",
         "Templates": [
           {
-            "Mask": "upp_main",
-            "Template": "[IBNAME]_el"
+            "Mask": "(upp_main)",
+            "Template": "[IBNAME]"
           }
         ]
       }
