feat: авто удаление файлов lgp lgx после чтения по настройке
    "LogFilesStoringDays": 0

feat: подключил логгер в EventLogReader

feat: readme

--- a/OneSTools.EventLog.Exporter.Manager/appsettings.json
+++ b/OneSTools.EventLog.Exporter.Manager/appsettings.json
@@ -27,7 +27,8 @@
     "CollectedFactor": 3,
     "ReadingTimeout": 1,
     "LoadArchive": false,
-    "SkipEventsBeforeDate": "2022-04-01T00:00:00"
+    "SkipEventsBeforeDate": "2022-04-01T00:00:00",
+    "LogFilesStoringDays": 0
   },
   "ClickHouse": {
     "ConnectionString": "Host=172.19.149.61;Port=8123;Username=default;password=;"
