--- a/OneSTools.EventLog.Exporter/appsettings.json
+++ b/OneSTools.EventLog.Exporter/appsettings.json
@@ -15,7 +15,8 @@
     "CollectedFactor": 3,
     "ReadingTimeout": 1,
     "LoadArchive": false,
-    "SkipEventsBeforeDate": "2022-04-01T00:00:00"
+    "SkipEventsBeforeDate": "2022-04-01T00:00:00",
+    "LogFilesStoringDays": 0
   },
   "ClickHouse": {
     "ConnectionString": "Host=CH_HOST_NAME;Port=8123;Database=DATABASE_NAME;Username=USER_NAME;password=PASSWORD;",
