--- a/OneSTools.EventLog.Exporter/appsettings.Development.json
+++ b/OneSTools.EventLog.Exporter/appsettings.Development.json
@@ -14,7 +14,8 @@
     "WritingMaxDegreeOfParallelism": 8,
     "CollectedFactor": 8,
     "ReadingTimeout": 1,
-    "LoadArchive": false
+    "LoadArchive": false,
+    "LogFilesStoringDays": 0
   },
   "ClickHouse": {
     "ConnectionString": "Host=192.168.0.93;Port=8123;Database=zup3_united_el;Username=default;password=;",
