--- a/OneSTools.EventLog/OneSTools.EventLog.csproj
+++ b/OneSTools.EventLog/OneSTools.EventLog.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="NodaTime" Version="3.0.5" />
     <PackageReference Include="OneSTools.BracketsFile" Version="2.1.9" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +47,7 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+
   </ItemGroup>
 
 </Project>
