feat: Добавил разделители и имя базы в логи
  теперь логи собираются со всех баз 1го менеджера в одну базу
  (при указании константы в имени Template)
  также учитывается ключ SeparateJSONToTables

Feat: добавил separator - поле для разделения читателя по кластеру 1С

--- a/OneSTools.EventLog.Exporter.Manager/appsettings.json
+++ b/OneSTools.EventLog.Exporter.Manager/appsettings.json
@@ -31,7 +31,9 @@
     "LogFilesStoringDays": 0
   },
   "ClickHouse": {
-    "ConnectionString": "Host=172.19.149.61;Port=8123;Username=default;password=;"
+    "ConnectionString": "Host=172.19.149.61;Port=8123;Username=default;password=;",
+    "ConvertJsonToSeparateTables": false,
+    "DatabaseGroup": "[DatabaseGroup]"
   },
   "ElasticSearch": {
     "Nodes": [
